testing/ParseError/invalid_import_1.ura
  import "another_file.ura"